Sat Jan 22 01:37:40 1994  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)

	* sparc-tdep.c (frame_saved_pc):  Get the pc from the saved pc
	in the sigcontext if it is a signal trampoline frame.
	* config/sparc/tm-sun4sol2.h (IN_SIGTRAMP, SIGCONTEXT_PC_OFFSET):
	Define for Solaris2.

Sat Jan 22 00:34:47 1994  Stu Grossman  (grossman at cygnus.com)

	* sparc-tdep.c, lynx-nat.c, config/sparc/tm-sparc.h,
	config/sparc/tm-sparclynx.h:  Move defs of FRAME_SAVED_I0/L0 to
	tm-sparc.h so they can be overridden if necessary.

Fri Jan 21 17:49:28 1994  Stu Grossman  (grossman at cygnus.com)

	* lynx-nat.c:  Add Sparc support.
	* sparcly-nat.c:  Remove.  It's useless.
	* config/sparc/nm-sparclynx.h:  Rewrite.
	* config/sparc/sparclynx.mh (NATDEPFILES):  Replace sparcly-nat.o
	with lynx-nat.o
	* config/sparc/tm-sparclynx.h:  Rewrite.

Fri Jan 21 19:08:48 1994  Ian Lance Taylor  (ian@tweedledumb.cygnus.com)

	* rs6000-pinsn.c: Use the new disassembler in the opcodes
	directory.  Old code was discarded, since the new opcode table has
	a different format.

Fri Jan 21 14:28:30 1994  Fred Fish  (fnf@cygnus.com)

	* Makefile.in (realclean):  Remove info files per make-stds.texi.

Fri Jan 21 12:47:53 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* dbxread.c (end_psymtab): Only patch psymtab textlow and texthigh
	if N_SO_ADDRESS_MAYBE_MISSING is defined.
	* config/sparc/tm-sun4sol2.h: Define it.

Thu Jan 20 15:04:24 1994  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)

	* printcmd.c (print_address_symbolic):  Unconditionally use msymbol
	if we did not find a symbol.

Fri Jan 21 08:20:18 1994  Jeffrey A. Law  (law@snake.cs.utah.edu)

	* infptrace.c (child_xfer_memory): Only use if CHILD_XFER_MEMORY
	is not defined.

	* hppab-nat.c (call_ptrace): Delete redundant function.
	(kill_inferior, attach, detach, child_resume): Likewise.
	(child_xfer_memory): Likewise.

	* hppah-nat.c (call_ptrace): Delete redundant function.
	(kill_inferior, attach, detach, child_resume): Likewise.